<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/sortButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/sort"
                    android:padding="8dp"
                    android:src="@drawable/ic_sort"
                    app:tint="?attr/colorControlNormal" />

                <ImageButton
                    android:id="@+id/settingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/settings"
                    android:padding="8dp"
                    android:src="@drawable/ic_settings"
                    app:tint="?attr/colorControlNormal" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clipToPadding="true"
                android:fadingEdgeLength="40dp"
                android:requiresFadingEdge="horizontal"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/no_notes_msg"
            android:textAppearance="?attr/textAppearanceBody1"
            android:gravity="center"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="true"
            android:padding="8dp"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="vertical"
            tools:itemCount="7" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
